Some lambda removed with JStream